# Titov_19212

./: .gitmodules
Befunge93/: 99b.bfg  battle.bfg  calculator.bfg  numguess.bfg  testfile.bfg
GameLife/: GameLife.pro  field.cpp  field.h  fieldmodel.cpp  fieldmodel.h  filehandler.cpp  filehandler.h  fileparser.cpp.autosave  gamewidget.cpp  gamewidget.h  mainwindow.cpp  mainwindow.h  (+3 more)
Prisoner_dilemma_simulator/: CMakeLists.txt  Prisoner_dilemma_simulator  macro.h  main.cpp  tests.cpp
Prisoner_dilemma_simulator/Factory/: Factory.cpp  Factory.h
Prisoner_dilemma_simulator/InputHandler/: InputHandler.cpp  InputHandler.h
Prisoner_dilemma_simulator/Printer/: Printer.cpp  Printer.h
Prisoner_dilemma_simulator/Simulator/: Simulator.cpp  Simulator.h
Prisoner_dilemma_simulator/StrategiesStuff/: create_shared.sh
Prisoner_dilemma_simulator/StrategiesStuff/include/: AllCooperate.h  AllDefect.h  GoByMajority.h  Random.h  SoftTitForTat.h  Strategy.h  ToughTitForTat.h
Prisoner_dilemma_simulator/StrategiesStuff/src/: AllCooperate.cpp  AllDefect.cpp  GoByMajority.cpp  Random.cpp  SoftTitForTat.cpp  ToughTitForTat.cpp
Prisoner_dilemma_simulator/cmake-build/: CMakeCache.txt  Makefile  Prisoner_dilemma_simulator  cmake_install.cmake
Prisoner_dilemma_simulator/cmake-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Prisoner_dilemma_simulator/cmake-build/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Prisoner_dilemma_simulator/cmake-build/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+263 files in other folders)
